--- a/signup.html
+++ b/signup.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="img/top-view-snowflake-shape.jpg" />
+    <link rel="shortcut icon" href="signup/img/top-view-snowflake-shape.jpg" />
     <title>Bookmarks</title>
-    <link rel="stylesheet" href="stylesheet/bootstrap.min.css" />
-    <link rel="stylesheet" href="stylesheet/mystyle.css" />
+    <link rel="stylesheet" href="signup/stylesheet/bootstrap.min.css" />
+    <link rel="stylesheet" href="signup/stylesheet/mystyle.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,16 +36,16 @@
 
           <button class="btn btn-outline-info  w-100">Sign Up</button>
           
-          <p class="text-white mt-3"> Do you have an account ?<a href="../signin/login.html" class="ms-1 text-decoration-none text-info">Sign In</a></p>
+          <p class="text-white mt-3"> Do you have an account ?<a href="../Assignment-js(4)/login.html" class="ms-1 text-decoration-none text-info">Sign In</a></p>
         </div>
 
       </div>
     </form>
 
   
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/main.js"></script>
+
+  <script src="signup/js/bootstrap.bundle.min.js"></script>
+  <script src="signup/js/main.js"></script>
    
     
 
