--- a/login.html
+++ b/login.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="img/top-view-snowflake-shape.jpg" />
     <title>Login System</title>
-    <link rel="stylesheet" href="stylesheet/bootstrap.min.css" />
-    <link rel="stylesheet" href="stylesheet/mystyle.css" />
+    <link rel="stylesheet" href="signin/stylesheet/bootstrap.min.css" />
+    <link rel="stylesheet" href="signin/stylesheet/mystyle.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,15 +35,15 @@
 
           <button class="btn btn-outline-info w-100">Sign In</button>
           
-          <p class="text-white mt-3"> Don't have an account? <a href="../signup/signup.html" class="ms-1 text-decoration-none text-info"> Sign Up</a></p>
+          <p class="text-white mt-3"> Don't have an account? <a href="../Assignment-js(4)/signup.html" class="ms-1 text-decoration-none text-info"> Sign Up</a></p>
         </div>
 
       </div>
     </form>
   
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/login.js"></script>
+ 
+  <script src="signin/js/bootstrap.bundle.min.js"></script>
+  <script src="signin/js/login.js"></script>
    
     
 
