--- a/welcome.html
+++ b/welcome.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="img/top-view-snowflake-shape.jpg" />
     <title>Login System</title>
-    <link rel="stylesheet" href="stylesheet/bootstrap.min.css" />
-    <link rel="stylesheet" href="stylesheet/mystyle.css" />
+    <link rel="stylesheet" href="welcome/stylesheet/bootstrap.min.css" />
+    <link rel="stylesheet" href="welcome/stylesheet/mystyle.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,9 +20,9 @@
   <body>
 
     <h1 class="d-flex justify-content-center align-content-center mt-5 py-5" id="welcomeMsg"></h1> 
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/welcome.js"></script>
+
+  <script src="welcome/js/bootstrap.bundle.min.js"></script>
+  <script src="welcome/js/welcome.js"></script>
    
     
 
