--- a/signup.html
+++ b/signup.html
@@ -36,7 +36,7 @@
 
           <button class="btn btn-outline-info  w-100">Sign Up</button>
           
-          <p class="text-white mt-3"> Do you have an account ?<a href="../Assignment-js(4)/login.html" class="ms-1 text-decoration-none text-info">Sign In</a></p>
+          <p class="text-white mt-3"> Do you have an account ?<a href="./index.html" class="ms-1 text-decoration-none text-info">Sign In</a></p>
         </div>
 
       </div>
