--- a/welcome.html
+++ b/welcome.html
@@ -1,30 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="img/top-view-snowflake-shape.jpg" />
-    <title>Login System</title>
-    <link rel="stylesheet" href="welcome/stylesheet/bootstrap.min.css" />
-    <link rel="stylesheet" href="welcome/stylesheet/mystyle.css" />
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Electric Blue Design</title>
+  <link rel="stylesheet" href="./welcome/stylesheet/bootstrap.min.css">
+  <link rel="stylesheet" href="./welcome/stylesheet/mystyle.css">
+</head>
+<body>
+  <header class="hero-section">
+    <h1 id="welcomeMsg"></h1>
+    <p>Embrace the energy and glow of creativity.</p>
+    <button class="cta-button" id="logOutBtn"> <i class="fa-solid fa-right-from-bracket"></i>
+      Log out</button>
+  </header>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Merienda:wght@300..900&family=Norican&display=swap" rel="stylesheet">
-    <script
-      src="https://kit.fontawesome.com/c0fb1b306e.js"
-      crossorigin="anonymous"
-    ></script>
+  <section class="features">
+    <div class="feature-card">
+      <img src="./welcome/img/new (1).jpg" alt="Feature One Image">
+      <h2>Feature One</h2>
+      <p>Experience vibrant designs with glowing highlights.</p>
+    </div>
+    <div class="feature-card">
+      <img src="./welcome/img/new (2).jpg" alt="Feature Two Image">
+      <h2>Feature Two</h2>
+      <p>Innovative layouts and responsive designs.</p>
+    </div>
+    <div class="feature-card">
+      <img src="./welcome/img/new (3).jpg" alt="Feature Three Image">
+      <h2>Feature Three</h2>
+      <p>Customize your web presence with bold colors.</p>
+    </div>
+    <div class="feature-card">
+      <img src="./welcome/img/new (4).jpg" alt="Feature Four Image">
+      <h2>Feature Four</h2>
+      <p>Seamlessly integrate your ideas into reality.</p>
+    </div>
+    <div class="feature-card">
+      <img src="./welcome/img/new (5).jpg" alt="Feature Five Image">
+      <h2>Feature Five</h2>
+      <p>Enjoy high-performance websites and applications.</p>
+    </div>
+    <div class="feature-card">
+      <img src="./welcome/img/new (6).jpg" alt="Feature Six Image">
+      <h2>Feature Six</h2>
+      <p>Stay ahead with cutting-edge technologies and tools.</p>
+    </div>
+  </section>
 
-  </head>
-  <body>
+  <footer class="footer">
+    <p>&copy; 2024 Electric Blue Design. All rights reserved.</p>
+  </footer>
 
-    <h1 class="d-flex justify-content-center align-content-center mt-5 py-5" id="welcomeMsg"></h1> 
-
-  <script src="welcome/js/bootstrap.bundle.min.js"></script>
-  <script src="welcome/js/welcome.js"></script>
-   
-    
-
-  </body>
+  <script src="https://kit.fontawesome.com/ca029ac332.js" crossorigin="anonymous"></script>
+  <script src="./welcome/js/bootstrap.bundle.min.js"></script>
+  <script src="./welcome/js/welcome.js"></script>
+</body>
 </html>
