--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
           <button class="btn btn-outline-info w-100">Sign In</button>
           
-          <p class="text-white mt-3"> Don't have an account? <a href="../Assignment-js(4)/signup.html" class="ms-1 text-decoration-none text-info"> Sign Up</a></p>
+          <p class="text-white mt-3"> Don't have an account? <a href="./signup.html" class="ms-1 text-decoration-none text-info"> Sign Up</a></p>
         </div>
 
       </div>
